<resources>
    <string name="app_name">Nearby File Transfer</string>
    <string name="role_executer">Executer</string>
    <string name="role_offloader">Offloader</string>
    <string name="choose_role">Choose Your Role</string>
    <string name="codename">Codename: </string>
    <string name="status">Status: </string>
    <string name="start_advertise">Start Advertising</string>
    <string name="stop_advertise">Stop Advertising</string>
    <string name="Details">Detalis</string>
    <string name="conn_details">Connection Details: </string>
    <string name="op_details">Operation Details: </string>
    <string name="task_details">Task Details: </string>
    <string name="rec_off">Recieved from Offloader</string>
    <string name="res_exec">Result after Executing Task</string>
    <string name="execute">Execute Task</string>
    <string name="send_to_off">Return Result</string>
    <string name="start_discovery">Start Discovering</string>
    <string name="stop_discovery">Stop Dicovering</string>
    <string name="proceed">Proceed</string>
    <string name="task_data">Choose input file: </string>
    <string name="result_from_executer">Result from Executer</string>
    <string name="size">size (Bytes)</string>
    <string name="operation">Operation</string>
    <string name="op_compress">Compress this Image</string>
    <string name="op_greyscale">Greyscale this Image</string>
    <string name="error_missing_permissions">Essential Permission Denied</string>
    <string name="file_extension">File extension</string>
    <string name="code_file">Choose code file: </string>
    <string name="browse">Browse</string>
    <string name="list_executers">List of Nearby Executers</string>
    <string name="slider_inst">Set your preferences \n(Each weight must be a decimal value between 0 and 1.Also sum of weights must be 1)</string>
    <string name="system_param_pref">System Parameter</string>
    <string name="broker_rating_pref">Broker Rating</string>
    <string name="percent">%</string>
    <string name="cpu_freq_unit">MHz</string>
    <string name="storage_unit">KB</string>
    <string name="input_file_name">Input Filename</string>
    <string name="code_file_name">Code Filename</string>
    <string name="discovery_count_down">Discovery stops in: </string>
    <string-array name="count_minutes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="selection_methods">
        <item>Weighted sum</item>
        <item>TOPSIS</item>
    </string-array>
    <string name="discovery_stops_in">Discovery stops in</string>
    <string name="minutes">minutes</string>
</resources>
