<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/slider_inst"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/weights_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        android:progress="50"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tv_system_weight"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/system_param_pref"
        app:layout_constraintStart_toStartOf="@+id/weights_seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/weights_seek_bar" />

    <TextView
        android:id="@+id/tv_system_pref_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_system_weight"
        app:layout_constraintStart_toStartOf="@+id/tv_system_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_system_weight" />

    <TextView
        android:id="@+id/tv_rating_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/broker_rating_pref"
        app:layout_constraintEnd_toEndOf="@+id/weights_seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/weights_seek_bar" />

    <TextView
        android:id="@+id/tv_rating_pref_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating_pref"
        app:layout_constraintStart_toStartOf="@+id/tv_rating_pref"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_pref" />

</androidx.constraintlayout.widget.ConstraintLayout>
